--- a/.github/workflows/python_linters.yaml
+++ b/.github/workflows/python_linters.yaml
@@ -32,4 +32,4 @@ jobs:
       - name: Install Black
         run: pip install black
       - name: Run black --check .
-        run: black --check greynoise-enrichment/source/greynoise_anomali_enrichment.py
+        run: black --check --line-length=120 greynoise-enrichment/source/greynoise_anomali_*.py
