--- a/.github/workflows/python_linters.yaml
+++ b/.github/workflows/python_linters.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: julianwachholz/flake8-action@v1.1.0
         with:
           checkName: "Python Lint"
-          path: greynoise-enrichment/source/greynoise_anomali_*.py
+          path: greynoise-enrichment/source/greynoise**.py
 
   black:
     name: Python Lint - black
