--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 max-line-length = 120
 max-complexity = 10
+exclude = greynoise-enrichment/source/AnomaliEnrichment.py,greynoise-enrichment/source/AnomaliTransform.py
 
 [isort]
 multi_line_output = 3
